# iosc.py

./: .done.md  .gitignore  .notes.md  .test.md  Done.md  LICENSE  Notes.md  README.md  TODO.md  Test.md  iosc.spec  pyproject.toml
contrib/: iosc.desktop  run_iosc.py  run_iosc.sh  win.py
debian/: changelog  control  copyright  install  py3dist-overrides  rules
doc/: .backlog.md  .done.md  .notes.md  .test.md  TODO.md
iosc/: __init__.py  _version.py  chart.py  comtrade.py  const.py  convert.py  convtrade.py  dialog.py  icon.py  iosc.qrc  iosc_rc.py  main.py  maintabber.py  mainwidget.py  mainwindow.py  mycomtrade.py  prefs.py  qrc.py  sigfunc.py  siglist.py  siglist_tw.py  sigprop.py  sigwidget.py  view.py  wtable.py
iosc/core/: __init__.py  comtrade.py  convtrade.py  mycomtrade.py  sigfunc.py  tocsv.py
iosc/draft/: siglist_mvc.py  siglist_tw.py  siglist_vbl.py
iosc/i18n/: iOsc_ru.ts  iosc_ru.ts
iosc/sig/: __init__.py  cvd.py  mainwidget.py  prop.py  section.py  table.py  widget.py
iosc/sig/calc/: __init__.py  dialog.py
samples/: 05.cfg  AD_BREAKER.cfg  IMF3R-7783--13-03-11-15-19-07.cfg  IMF3R-7783--13-03-11-15-19-07_.cfg  New-osc.cfg  R001_030-2014_01_08_12_30_06.cfg  R001_059-2016_03_30_14_16_52.cfg  R002_053-2016_11_11_08_56_26.cfg  R020_107-03-08-2016-06-21-19-374.cfg  R069_089-21-05-2014-14-42-03-042.cfg  R071_010-2015_10_12_02_55_54.cfg  TestOsc1ASCII.cfg  h1_h.cfg.comtrade.cfg  h2.cfg  osc1.cfg  osc1_shifted.cfg  osc2.cfg
samples/short_L/: 01.cfg  01.hdr  02.cfg  02.hdr  Playback.cfg
samples/zeros/: TestOsc1ASCII.cfg  h2.cfg
(+41 files in other folders)
